--- a/home_page.html
+++ b/home_page.html
@@ -196,6 +196,7 @@ box-shadow: 10px 10px 10px  10px black;
     <ul class="sidebarMenuInner">
       <a href="home_page.html"><li><i>HOME</i></li></a>
       <a href="learn_lang.html"><li>Learn languages</li></a>
+      <a href="https://chaitanyabagadehivarvadi.github.io/sem1_discreat_math/sem_book.html"><li>Bcs Book</li></a>
       <a href="sem_1.html"><li>FYBSC SEM -1      </li></a>
       <a href="sem_2.html"><li>FYBSC SEM -2    </li></a>
       <a href="project.html"><li>OUR languages project file</li></a>
