--- a/sem1_book.html
+++ b/sem1_book.html
@@ -27,7 +27,7 @@ text-align:center;
 <body>
 <div class="head"><i>SELECT BOOK</i></div>
 <a href="https://chaitanyabagadehivarvadi.github.io/sem1_discreat_math/select_cha.html"><div class="book1">   <img src="math1.jpg" alt="Girl in a jacket" width="100%" height="100%">   </div></a>
-<a href="https://chaitanyabagadehivarvadi.github.io/matrix/matrix_book.html"><div class="book1">   <img src="math2.jpg" alt="Girl in a jacket" width="100%" height="100%">   </div></a>
+<a href="https://chaitanyabagadehivarvadi.github.io/matrix/select_cha.html"><div class="book1">   <img src="math2.jpg" alt="Girl in a jacket" width="100%" height="100%">   </div></a>
 <a href=" "><div class="book1">   <img src="stat1.jpg" alt="Girl in a jacket" width="100%" height="100%">   </div></a>
 <a href=" "><div class="book1">   <img src="stat2.jpg" alt="Girl in a jacket" width="100%" height="100%">   </div></a>
 <a href=" "><div class="book1">   <img src="c.jpg" alt="Girl in a jacket" width="100%" height="100%">   </div></a>
