--- a/home_page.html
+++ b/home_page.html
@@ -209,13 +209,13 @@ box-shadow: 10px 10px 10px  10px black;
   <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
       <a href="home_page.html"><li><i>HOME</i></li></a>
-      <a href="learn_lang.html"><li>ABOUT US</li></a>
-      <a href="select_sem.html"><li>TOTAL DEPOSITE BY MEMBERS</li></a>
-      <a href="sem_1.html"><li>  TOTAL INTREST PAID BY MEMBERS </li></a>
-      <a href="sem_2.html"><li> TOTAL PANALITY PAID BY MEMBERS</li></a>
-      <a href="project.html"><li>TOTAL PRESENTY OF MEMBER</li></a>
-      <a href="notes.html"><li>LOAN HOLDER </li></a>
-      <a href="notes.html"><li>GOODWILL OF COMPANY PER MEMBER </li></a>
+      <a href=""><li>ABOUT US</li></a>
+      <a href="depo.html"><li>TOTAL DEPOSITE BY MEMBERS</li></a>
+      <a href=""><li>  TOTAL INTREST PAID BY MEMBERS </li></a>
+      <a href=""><li> TOTAL PANALITY PAID BY MEMBERS</li></a>
+      <a href=""><li>TOTAL PRESENTY OF MEMBER</li></a>
+      <a href=""><li>LOAN HOLDER </li></a>
+      <a href=""><li>GOODWILL OF COMPANY PER MEMBER </li></a>
       
       <li>chaitanya bagade<span>Web Developer</span></li>
       <a href="#"><li>contact me 9307084680</li></a>
